--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ footer{
     background: url(images/bg-desktop.svg);
     background-color: var(--violet);
     background-repeat: no-repeat;
-    background-size: 85vw 100vh;
     padding: 0;
   }
   .container{
@@ -112,14 +111,14 @@ footer{
     flex-direction: row;
     /* align-items: center; */
     justify-content: space-between;
-    margin-block: 5rem 2rem;
+    margin-block: 6rem 2rem;
   }
   .hero-image__container{
-    width: 50%;
+    width: 51%;
     margin: 0;
   }
   .hero-content{
-    width: 45%;
+    width: 40%;
   }
   h1{
     text-align: left;
@@ -129,7 +128,7 @@ footer{
   }
   p{
     text-align: left;
-    margin-right: 8rem;
+    margin-right: .5rem;
   }
   button{
     display: block;
@@ -142,7 +141,7 @@ footer{
 
   footer{
     align-self: flex-end;
-    margin-right: 4rem;
+    margin-right: 2rem;
   }
   .icon{
     margin-right: .5rem;
